tests/NormalTests/paczka1/fuzzy1/58783865.err
Error in line 1: P46n0Lj S694 52,7
Error in line 14: NmIt8dr A26 61,6
Error in line 10: LhHq5W5 S493 45,8
Error in line 8: A26 S694 11,6
Error in line 27: 905hs6Pja9 A26 2371
Error in line 25: 905hs6Pja9 A26 89,8
